<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Frex - a fractal image generator for Android mobile devices
  ~
  ~ Copyright (C) 2013 by Norman Fomferra
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Frex</string>
    <string name="random">Random</string>
    <string name="decorations">Decorations</string>
    <string name="properties">Properties</string>
    <string name="distance_function">Distance function</string>
    <string name="dilation">Dilation</string>
    <string name="translation_x">Horizontal offset</string>
    <string name="translation_y">Vertical offset</string>
    <string name="colors">Colors</string>
    <string name="color_scheme">Color scheme</string>
    <string name="color_gain">Color gain</string>
    <string name="color_offset">Color offset</string>
    <string name="color_repeat">Repeat colors</string>
    <string name="num_iterations">Level of detail</string>
    <string name="save_fractal">Save Fractal</string>
    <string name="manage_fractals">Manage Fractals</string>
    <string name="delete_saved_fractals">Delete Fractals</string>
    <string name="select_fractal">Select fractal</string>
    <string name="fractal_name">Fractal name</string>
    <string name="fractal_type">Fractal type</string>
    <string name="zoom_all">Zoom All</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="decorated_fractal">Decorated fractal</string>
    <string name="julia_mode_fractal">\'Julia-Set\' mode</string>
    <string name="fractal_saved">Fractal saved.</string>
    <string name="error_msg">Error: %s</string>
    <string name="no_fractals_found">No saved fractals found</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="out_of_memory">Out of memory</string>
    <string name="wallpaper_compute_msg">
        A new wallpaper (%1$dx%2$d px) will be computed for your device. This may take a few seconds to minutes depending on your hardware.\nDo you want to exchange the existing wallpaper?
    </string>
    <string name="wallpaper_replace_msg">
        Do you want to exchange the existing wallpaper?
    </string>
    <string name="wallpaper_set_msg">Wallpaper set</string>
    <string name="save_image">Save Image</string>
    <string name="share_image">Share Image</string>
    <string name="email_subject">A fractal for you</string>
    <string name="image_saved_msg">Image saved to\n%s</string>
    <string name="image_save_failed_msg">Failed to save image</string>
    <string name="parameters_not_found_msg">Parameters not found</string>
    <string name="fractals_deleted_msg">All fractals deleted</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="delete_fractal">Delete Fractal</string>
    <string name="really_delete_fractal">Do you wish to permanently delete this fractal?</string>
    <string name="fractal_deleted">Fractal deleted</string>
    <string name="delete_all">Delete all Files</string>
    <string name="calculation">Calculation</string>
    <string name="num_tasks">Number of Tasks</string>
    <string name="storage">Storage</string>
    <string name="about_frex">About Frex</string>
    <string name="version">Version</string>
    <string name="version_summary">
        Frex version %s\nCopyright © 2013 by Norman Fomferra.
    </string>
    <string name="license">License</string>
    <string name="license_summary">GNU General Public License v3.0.\nFrex is free software.</string>
    <string name="project">Project</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="status">Status</string>
    <string name="delete_all_summary">Deletes all saved Frex files.</string>
    <string name="delete_all_warning">Beware!\n\nYou are about to delete all of your saved fractals.\nThis action cannot be undone.</string>
    <string name="behaviour">Behaviour</string>
    <string name="navigate_on_back">Back button navigates</string>
    <string name="navigate_on_back_summary_on">Back button navigates back to last visited regions.</string>
    <string name="navigate_on_back_summary_off">Back button exits Frex (standard behaviour).</string>
    <string name="empty_region_history_msg">Region history empty.</string>
    <string name="first_region_msg">Initial region reached.</string>
    <string name="get_pal_from_img_button_text">From Pic…</string>
    <string name="get_pal_from_img_title">Extracting Palette from Picture</string>
    <string name="examples">Examples</string>
    <string name="turbulence">Turbulence (very compute-intensive!)</string>
    <string name="turb_scale">Smoothing of turbulence</string>
    <string name="turb_intens">Intensity of turbulence</string>
    <plurals name="storage_summary">
        <item quantity="one">%1$d file, %2$s storage used.\nPath: %3$s</item>
        <item quantity="other">%1$d files, %2$s storage used.\nPath: %3$s</item>
    </plurals>
    <plurals name="deleted_summary">
        <item quantity="one">%d file deleted.</item>
        <item quantity="other">%d files deleted.</item>
    </plurals>
    <plurals name="num_tasks_summary">
        <item quantity="one">The CPU of this device has %1$d core.\nNumber of concurrently working tasks is %2$d.</item>
        <item quantity="other">The CPU of this device has %1$d cores.\nNumber of concurrently working tasks is %2$d.</item>
    </plurals>
</resources>
