<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Frex - a fractal image generator for Android mobile devices
  ~
  ~ Copyright (C) 2013 by Norman Fomferra
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/colors_dialog"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="fill_horizontal"
              android:padding="10dp"
              android:minWidth="300dp"
              android:background="#00000000"
        >


    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="fill_horizontal"
              android:text="@string/color_scheme"
            />

    <Spinner android:id="@+id/color_table_spinner"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:minWidth="100dp"
            />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/color_offset"
            />

    <SeekBar android:id="@+id/color_offset_seek_bar"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
            />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/color_gain"
            />

    <SeekBar android:id="@+id/color_gain_seek_bar"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
            />

    <CheckBox android:id="@+id/color_repeat"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="fill_horizontal"
              android:text="@string/color_repeat"
            />

    <Button android:id="@+id/random_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/random"
            />


</LinearLayout>
