<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Frex - a fractal image generator for Android mobile devices
  ~
  ~ Copyright (C) 2012 by Norman Fomferra
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/properties_dialog"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_gravity="fill_horizontal"
              android:padding="10dp"
              android:minWidth="300dp"
        >

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="fill_horizontal"
              android:text="@string/fractal_type"
            />

    <Spinner android:id="@+id/fractal_type_spinner"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"

            />

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="fill_horizontal"
              android:text="@string/num_iterations"
            />

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            >
        <SeekBar android:id="@+id/num_iterations_seek_bar"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_weight="0.8"

                />

        <EditText android:id="@+id/num_iterations_edit_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="right"
                  android:layout_weight="0.2"
                  android:maxEms="6"
                  android:numeric="integer"
                  android:inputType="number"/>

    </LinearLayout>

    <CheckBox android:id="@+id/decorated_fractal_check_box"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/decorated_fractal"
            />

    <CheckBox android:id="@+id/julia_mode_fractal_check_box"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/julia_mode_fractal"
            />

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="fill_horizontal"
                  android:padding="5dp"
            >
        <Button android:id="@+id/cancel_button"
                android:text="@android:string/cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        <Button android:id="@+id/ok_button"
                android:text="@android:string/ok"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
    </LinearLayout>

</LinearLayout>
